ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/ScanUpload_ITR_Api_Count__c.field-meta.xml
<CustomField>
    <fullName>ScanUpload_ITR_Api_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Scan Upload ITR Api Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>