ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Secured_Loans__c.field-meta.xml
<CustomField>
    <fullName>Secured_Loans__c</fullName>
    <label>Secured Loans</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>