ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/set_is_Bank_Details_Assessed__c.field-meta.xml
<CustomField>
    <fullName>set_is_Bank_Details_Assessed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>set is Bank Details Assessed</label>
    <type>Checkbox</type>
</CustomField>