ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Shareholder_funds__c.field-meta.xml
<CustomField>
    <fullName>Shareholder_funds__c</fullName>
    <label>Shareholder funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>