ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/SMS_to_be_triggered_to__c.field-meta.xml
<CustomField>
    <fullName>SMS_to_be_triggered_to__c</fullName>
    <label>SMS to be triggered to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>