ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Sundry_Creditors__c.field-meta.xml
<CustomField>
    <fullName>Sundry_Creditors__c</fullName>
    <label>Sundry Creditors</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>