ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Tax_Return_Filed__c.field-meta.xml
<CustomField>
    <fullName>Tax_Return_Filed__c</fullName>
    <label>Tax Return Filed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>