ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/To_Month__c.field-meta.xml
<CustomField>
    <fullName>To_Month__c</fullName>
    <label>To Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>