ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Unique_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Unique_Registration_Number__c</fullName>
    <label>Unique Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>