ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Unsecured_Loans__c.field-meta.xml
<CustomField>
    <fullName>Unsecured_Loans__c</fullName>
    <label>Unsecured Loans</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>