ProdIND/ProdPrograms/force-app/main/default/objects/Income_Details__c/fields/Year_of_Registeration__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Registeration__c</fullName>
    <label>Year of Registeration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>